--- a/react-vite/package.json
+++ b/react-vite/package.json
@@ -12,14 +12,17 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.7.0",
         "@tailwindcss/vite": "^4.1.4",
+        "js-cookie": "^3.0.5",
         "lucide-react": "^0.503.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-redux": "^9.2.0",
+        "react-router-dom": "^7.5.3",
         "tailwindcss": "^4.1.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.22.0",
+        "@types/js-cookie": "^3.0.6",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
